Fixes:all wargaols functional, scopes correcteed, localization

--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -1,13 +1,13 @@
-l_english:
-  cal_caliphate_sunni: "Sunni Caliphate"
-  desc_cal_caliphate_sunni: "We are the secular leader of all the Sunni muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
-  cal_caliphate_shia: "Shia Caliphate"
-  desc_cal_caliphate_shia: "We are the secular leader of all the Shia muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
-  cal_caliphate_ibadi: "Ibadi Caliphate"
-  desc_cal_caliphate_ibadi: "We are the secular leader of all the Ibadi muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
-  cal_caliphate_destroyed: "Caliphate destroyed"
-  desc_cal_caliphate_destroyed: "We have rid the world of the imposter Caliph and showed him the error of his way."
-  cal_not_defender: "Caliph is not the Defender of the Faith"
-  desc_cal_not_defender: "Another country has taken it upon them to call themselves the Defender of the Faith. A duty that should be carried out by the Caliph. Should this continue, it could have serious repercussions for our legitimacy."
-  cal_stronger_muslim: "Stronger muslim rival"
-  desc_cal_stronger_muslim: "Another Muslim country has outgrown us, both in size and military power. This is unacceptable! The caliph is supposed to be the strongest leader of all Muslims. Should this continue, it could have serious repercussions for our legitimacy."
+﻿l_english:
+ cal_caliphate_sunni: "Sunni Caliphate"
+ desc_cal_caliphate_sunni: "We are the secular leader of all the Sunni muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
+ cal_caliphate_shia: "Shia Caliphate"
+ desc_cal_caliphate_shia: "We are the secular leader of all the Shia muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
+ cal_caliphate_ibadi: "Ibadi Caliphate"
+ desc_cal_caliphate_ibadi: "We are the secular leader of all the Ibadi muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
+ cal_caliphate_destroyed: "Caliphate destroyed"
+ desc_cal_caliphate_destroyed: "We have rid the world of the imposter Caliph and showed him the error of his way."
+ cal_not_defender: "Caliph is not the Defender of the Faith"
+ desc_cal_not_defender: "Another country has taken it upon them to call themselves the Defender of the Faith. A duty that should be carried out by the Caliph. Should this continue, it could have serious repercussions for our legitimacy."
+ cal_stronger_muslim: "Stronger muslim rival"
+ desc_cal_stronger_muslim: "Another Muslim country has outgrown us, both in size and military power. This is unacceptable! The caliph is supposed to be the strongest leader of all Muslims. Should this continue, it could have serious repercussions for our legitimacy."
