Change to only have one caliph for all denominations; disaster for turkey temp; change values for triggered modifiers; time limit dip action; localization still missing for new caliph title and associated

--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -11,3 +11,5 @@
  desc_cal_not_defender: "Another country has taken it upon them to call themselves the Defender of the Faith. A duty that should be carried out by the Caliph. Should this continue, it could have serious repercussions for our legitimacy."
  cal_stronger_muslim: "Stronger muslim rival"
  desc_cal_stronger_muslim: "Another Muslim country has outgrown us, both in size and military power. This is unacceptable! The caliph is supposed to be the strongest leader of all Muslims. Should this continue, it could have serious repercussions for our legitimacy."
+ cal_disaster_abandon: "Abandoned the Caliphate"
+ desc_cal_disaster_abandon: "We have abandoned the idea of the caliphate. No more shall a temporal leader be the head of our religion."
