Changes to disaster, unify islam dec
Change disaster to give choice between caliphate and republic, change unify islam decision to give event, add two formable countries (with unify islam dec, disaster)

--- a/localisation/cal_events_l_english.yml
+++ b/localisation/cal_events_l_english.yml
@@ -8,6 +8,11 @@
  cal_flavor.3.t: "Caliph dethroned!"
  cal_flavor.3.d: "The [From.From.Religion.GetName] Caliphate has been destroyed. The [From.GetAdjective] armies have defeated the [From.From.GetAdjective]s after years of gruelling war and decided to humiliate them and their entire faith by dismantling the Caliphate.\nThis might be the beginning of the end for them. Their armies have been demoralized, their vassals are disloyal, their people unruly. If there ever wa a great opportunity to strike it is now."
  cal_flavor.3.a: "It is a fragile system after all."
- cal_flavor.3.t: "Caliph dethroned!"
- cal_flavor.3.d: "The [From.Religion.GetName] Caliphate has been destroyed. Their own people have risen up and dethroned their Caliph. ...TODO"
- cal_flavor.3.a: "It is a fragile system after all."
+ cal_flavor.4.t: "Caliph dethroned!"
+ cal_flavor.4.d: "The caliphate has been dismantled by internal strife and discord.\nThe caliph has proven to his population that he is not the strong leader that was sent by god as a protector of all muslims. Dissatisfied rebels ahve stormed the caliphs palace and after slaughtering his regiment of bodyguards, dragged him to the capitals main square, where he was tried for treason against the country and god and all of Islam and proptly executed."
+ cal_flavor.4.a: "It is a fragile system after all."
+ cal_flavor.5.t: "Unify Islam"
+ cal_flavor.5.d: "We have conquered and we have persited and we have weathered every challange Allah has tested us with.\nBut now we stand victorious. We ahve proven to this world and to god, that we are the true heirs of Muhammed. We are the protector of all Islam and all Muslim's religious guide.\nNow we have to decide how we want to move forward:"
+ cal_flavor.5.a: "We shall vanquish all heathens. Allāhu akbaru!"
+ cal_flavor.5.b: "We will lead Islam into the future. In schā' Allāh!"
+ cal_flavor.5.c: "We must protect our fellow Muslim bretheren."
