--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -5,6 +5,8 @@
  desc_cal_caliphate_shia: "We are the secular leader of all the Shia muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
  cal_caliphate_ibadi: "Ibadi Caliphate"
  desc_cal_caliphate_ibadi: "We are the secular leader of all the Ibadi muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
+ cal_caliphate: "Caliphate"
+ desc_cal_caliphate: "We are the secular leader of all of Islam. It is our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
  cal_caliphate_destroyed: "Caliphate destroyed"
  desc_cal_caliphate_destroyed: "We have rid the world of the imposter Caliph and showed him the error of his way."
  cal_not_defender: "Caliph is not the Defender of the Faith"
@@ -13,3 +15,9 @@
  desc_cal_stronger_muslim: "Another Muslim country has outgrown us, both in size and military power. This is unacceptable! The caliph is supposed to be the strongest leader of all Muslims. Should this continue, it could have serious repercussions for our legitimacy."
  cal_disaster_abandon: "Abandoned the Caliphate"
  desc_cal_disaster_abandon: "We have abandoned the idea of the caliphate. No more shall a temporal leader be the head of our religion."
+ cal_islamic_state: "Muslim state"
+ desc_cal_islamic_state: "We have decided to enforece Islam onto our people and look to the horizon to expand muslim influence further."
+ cal_moderate_caliphate: "Moderate caliphate"
+ desc_cal_moderate_caliphate: "We will look towards guiding our people towards the future under the enlightend rule of our Caliph."
+ cal_protector_caliphate: "Protector of Islam"
+ desc_cal_protector_caliphate: "We must look to our bretheren that we have sworn to protect from heathen invaders."
