Finalize illegitimate caliph disaster
Add (provisional) localization to everything
Add monthly events to disasters
Add genocide vents + repercussion events
Add formable tags
Fix religion symbol
Add thumbnail

--- a/localisation/cal_countries_l_english.yml
+++ b/localisation/cal_countries_l_english.yml
@@ -1,4 +1,5 @@
-﻿ISS: "Muslim state"
-ISS_ADJ: "Muslim"
-ANA: "Turkey"
-ANA_ADJ: "Turkish"
+﻿l_english:
+ ISS: "Muslim state"
+ ISS_ADJ: "Muslim"
+ ANA: "Turkey"
+ ANA_ADJ: "Turkish"
