--- a/localisation/cal_events_l_english.yml
+++ b/localisation/cal_events_l_english.yml
@@ -13,6 +13,23 @@
  cal_flavor.4.a: "It is a fragile system after all."
  cal_flavor.5.t: "Unify Islam"
  cal_flavor.5.d: "We have conquered and we have persited and we have weathered every challange Allah has tested us with.\nBut now we stand victorious. We ahve proven to this world and to god, that we are the true heirs of Muhammed. We are the protector of all Islam and all Muslim's religious guide.\nNow we have to decide how we want to move forward:"
- cal_flavor.5.a: "We shall vanquish all heathens. Allāhu akbaru!"
- cal_flavor.5.b: "We will lead Islam into the future. In schā' Allāh!"
+ cal_flavor.5.a: "We shall vanquish all heathens. All&amacr;hu akbaru!"
+ cal_flavor.5.b: "We will lead Islam into the future. In sch&amacr;' All&amacr;h!"
  cal_flavor.5.c: "We must protect our fellow Muslim bretheren."
+ cal_flavor.6.t: "Rising support for Feminism"
+ cal_flavor.6.d: "TODO"
+ cal_flavor.6.a: "Support the feminist ideas"
+ cal_flavor.6.b: "The patriarchal structure has worked so far..."
+ cal_flavor.7.t: "Outrage over the [genocide_province.Culture.GetName] genocide"
+ cal_flavor.7.d: "TODO"
+ cal_flavor.7.a: "Accept national responibility for the genocide"
+ cal_flavor.7.b: "Fervently deny the existence of the genocide"
+ cal_flavor.7.c: "Commit the genocide again to show dominance"
+ cal_flavor.8.t: "[genocide_province.Culture.GetName] Genocide forgotten"
+ cal_flavor.8.d: "TODO"
+ cal_flavor.8.a: "If noone will say something it's best we keep quiet about this"
+ cal_flavor.9.t: "Outrage over the Armenian genocide"
+ cal_flavor.9.d: "TODO"
+ cal_flavor.9.a: "Accept national responibility for the genocide"
+ cal_flavor.9.b: "Fervently deny the existence of the genocide"
+ cal_flavor.9.c: "Commit the genocide again to show dominance"
