--- a/localisation/cal_government_l_english.yml
+++ b/localisation/cal_government_l_english.yml
@@ -1,7 +1,11 @@
 ﻿l_english:
-  cal_caliphate_reform: "Caliphate"
-  cal_caliphate_reform_desc: "TODO"
-  cal_atheist_republic_reform: "Atheist Republic"
-  cal_atheist_republic_reform_desc: "TODO"
-  cal_laicite_reform: "Laïcité Ideals"
-  laïcité_desc: "TODO"
+ cal_caliphate_reform: "Caliphate"
+ cal_caliphate_reform_desc: "TODO"
+ cal_religous_state_reform: "Religious state"
+ cal_religous_state_reform_desc: "TODO"
+ cal_atheist_republic_reform: "Atheist Republic"
+ cal_atheist_republic_reform_desc: "TODO"
+ cal_religious_freedom_reform: "Religious freedom"
+ cal_religious_freedom_reform_desc: "TODO"
+ cal_laicite_reform: "Laïcité Ideals"
+ cal_laicite_reform_desc: "TODO"
