--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ cal_is_caliph: "Is Caliph"
+ desc_cal_is_caliph: "TODO"
  cal_caliphate_sunni: "Sunni Caliphate"
  desc_cal_caliphate_sunni: "We are the secular leader of all the Sunni muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
  cal_caliphate_shia: "Shia Caliphate"
@@ -9,6 +11,9 @@
  desc_cal_caliphate: "We are the secular leader of all of Islam. It is our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
  cal_caliphate_destroyed: "Caliphate destroyed"
  desc_cal_caliphate_destroyed: "We have rid the world of the imposter Caliph and showed him the error of his way."
+ cal_caliphate_transcended: "Caliphate trancended"
+ desc_cal_caliphate_transcended: "TODO"
+ cal_is_caliph_tooltip: "Is Caliph"
  cal_not_defender: "Caliph is not the Defender of the Faith"
  desc_cal_not_defender: "Another country has taken it upon them to call themselves the Defender of the Faith. A duty that should be carried out by the Caliph. Should this continue, it could have serious repercussions for our legitimacy."
  cal_stronger_muslim: "Stronger muslim rival"
@@ -21,3 +26,35 @@
  desc_cal_moderate_caliphate: "We will look towards guiding our people towards the future under the enlightend rule of our Caliph."
  cal_protector_caliphate: "Protector of Islam"
  desc_cal_protector_caliphate: "We must look to our bretheren that we have sworn to protect from heathen invaders."
+ cal_feminism: "Feminism"
+ desc_cal_feminism: "TODO"
+ cal_patriarchy: "Patriarchy"
+ desc_cal_patriarchy: "TODO"
+ cal_genocide_province: "Genocided Province"
+ desc_cal_genocide_province: "TODO"
+ cal_concessions_to_soldiers: "Increase pay for the soldiers"
+ desc_cal_concessions_to_soldiers: "TODO"
+ harmonized_cal_christian: "Chritians Harmonized"
+ harmonized_cal_muslim: "Muslims Harmonized"
+ harmonized_cal_buddhism: "Buddhists Harmonized"
+ harmonized_cal_vajrayana: "Vajrayanas Harmonized"
+ harmonized_cal_mahayana: "Mahayanas Harmonized"
+ harmonized_cal_confucian: "Confucians Harmonized"
+ harmonized_cal_shinto: "Shintos Harmonized"
+ harmonized_cal_dharmic: "Dharmics Harmonized"
+ harmonized_cal_pagan: "Pagans Harmonized"
+ harmonized_cal_jewish_group: "Jews Harmonized"
+ harmonized_cal_zoroastrian_group: "Zoroastrians Harmonized"
+ harmonized_cal_atheism: "Irreligious Harmonized"
+ desc_harmonized_cal_christian: "Chritians Harmonized"
+ desc_harmonized_cal_muslim: "Muslims Harmonized"
+ desc_harmonized_cal_buddhism: "Buddhists Harmonized"
+ desc_harmonized_cal_vajrayana: "Vajrayanas Harmonized"
+ desc_harmonized_cal_mahayana: "Mahayanas Harmonized"
+ desc_harmonized_cal_confucian: "Confucians Harmonized"
+ desc_harmonized_cal_shinto: "Shintos Harmonized"
+ desc_harmonized_cal_dharmic: "Dharmics Harmonized"
+ desc_harmonized_cal_pagan: "Pagans Harmonized"
+ desc_harmonized_cal_jewish_group: "Jews Harmonized"
+ desc_harmonized_cal_zoroastrian_group: "Zoroastrians Harmonized"
+ desc_harmonized_cal_atheism: "Irreligious Harmonized"
