--- a/localisation/cal_opinion_l_english.yml
+++ b/localisation/cal_opinion_l_english.yml
@@ -1,8 +1,9 @@
-﻿cal_calipahte_rival_mod: "Caliphal rival"
-cal_calipahte_vassal_mod: "Caliphal vassal"
-cal_calipahte_muslim_mod: "Fellow Muslim"
-cal_calipahte_heretic_mod: "Muslim heretic"
-cal_caliph_legitimized: "Caliphal legitimization"
-cal_forced_religion: "Caliph forced religion"
-cal_islamic_state_opinion: "Expansionist Caliph"
-cal_protector_opinion: "Protector Caliph"
+﻿l_english:
+ cal_calipahte_rival_mod: "Caliphal rival"
+ cal_calipahte_vassal_mod: "Caliphal vassal"
+ cal_calipahte_muslim_mod: "Fellow Muslim"
+ cal_calipahte_heretic_mod: "Muslim heretic"
+ cal_caliph_legitimized: "Caliphal legitimization"
+ cal_forced_religion: "Caliph forced religion"
+ cal_islamic_state_opinion: "Expansionist Caliph"
+ cal_protector_opinion: "Protector Caliph"
