--- a/localisation/cal_war_l_english.yml
+++ b/localisation/cal_war_l_english.yml
@@ -1,35 +1,48 @@
 ﻿l_english:
-  cb_take_caliphate_sunni: "Take Sunni Caliphate"
-  cb_take_caliphate_sunni_desc: "If taken, you might become the target of another country trying to cease this opportunity."
-  cb_take_caliphate_shia: "Take Shia Caliphate"
-  cb_take_caliphate_shia_desc: "If taken, you might become the target of another country trying to cease this opportunity."
-  cb_take_caliphate_ibadi: "Take Ibadi Caliphate"
-  cb_take_caliphate_ibadi_desc: "If taken, you might become the target of another country trying to cease this opportunity."
-  cb_remove_caliph_heretic: "Remove the Caliphate"
-  cb_remove_caliph_heretic_desc: "Destoy their country ba forcing them to give up the title of Caliph."
-  cb_remove_caliph_heathen: "Remove the Caliphate"
-  cb_remove_caliph_heathen_desc: "Destoy their country ba forcing them to give up the title of Caliph."
-  take_capital_caliphate_sunni: "Take capital"
-  take_capital_caliphate_sunni_desc: "Take the enemy's capital."
-  take_capital_caliphate_shia: "Take capital"
-  take_capital_caliphate_shia_desc: "Take the enemy's capital."
-  take_capital_caliphate_shia: "Take capital"
-  take_capital_caliphate_shia_desc: "Take the enemy's capital."
-  CALIPHATE_CONTROL_WAR_NAME: "War for the Caliphate"
-  take_capital_attack_caliphate_heretic: "Take capital"
-  take_capital_attack_caliphate_heretic_desc: "Take the enemy's capital"
-  take_capital_attack_caliphate_heathen: "Take capital"
-  take_capital_attack_caliphate_heathen_desc: "Take the enemy's capital"
-  CALIPHATE_ATTACK_WAR_NAME: "War to topple the Caliphate"
-  PEACE_cal_take_caliphate_sunni: "Take Sunni Caliphate"
-  CB_ALLOWED_cal_take_caliphate_sunni: "Take Sunni Caliphate"
-  cal_take_caliphate_sunni_desc: "Take the Sunni Caliphate from [From.GetName]"
-  PEACE_cal_take_caliphate_shia: "Take Shia Caliphate"
-  CB_ALLOWED_cal_take_caliphate_shia: "Take Shia Caliphate"
-  cal_take_caliphate_shia_desc: "Take the Shia Caliphate from [From.GetName]"
-  PEACE_cal_take_caliphate_ibadi: "Take Ibadi Caliphate"
-  CB_ALLOWED_cal_take_caliphate_ibadi: "Take Ibadi Caliphate"
-  cal_take_caliphate_ibadi_desc: "Take the Ibadi Caliphate from [From.GetName]"
-  PEACE_cal_remove_caliphate: "Remove the Caliphate"
-  cal_remove_caliphate_desc: "Remove the Caliphate"
-  CB_ALLOWED_cal_remove_caliphate: "Force [From.GetName] to relinquish the title of Caliph"
+ cb_take_caliphate: "Take the caliphate"
+ cb_take_caliphate_desc: "If taken, you might become the target of another country trying to cease this opportunity."
+ cb_take_caliphate_sunni: "Take Sunni Caliphate"
+ cb_take_caliphate_sunni_desc: "If taken, you might become the target of another country trying to cease this opportunity."
+ cb_take_caliphate_shia: "Take Shia Caliphate"
+ cb_take_caliphate_shia_desc: "If taken, you might become the target of another country trying to cease this opportunity."
+ cb_take_caliphate_ibadi: "Take Ibadi Caliphate"
+ cb_take_caliphate_ibadi_desc: "If taken, you might become the target of another country trying to cease this opportunity."
+ cb_remove_caliph_heretic: "Remove the Caliphate"
+ cb_remove_caliph_heretic_desc: "Destoy their country ba forcing them to give up the title of Caliph."
+ cb_remove_caliph_heathen: "Remove the Caliphate"
+ cb_remove_caliph_heathen_desc: "Destoy their country ba forcing them to give up the title of Caliph."
+ cb_religous_state_jihad: "Great Jihad"
+ cb_religous_state_jihad_desc: "We must spread the ways of Islam to the entire world"
+ superiority_religious_state_unify: "Unify Islam"
+ superiority_religious_state_unify_desc: "We must unify all of Islam into our empire"
+ take_capital_caliphate: "Take capital"
+ take_capital_caliphate_desc: "Take the enemy's capital."
+ take_capital_caliphate_sunni: "Take capital"
+ take_capital_caliphate_sunni_desc: "Take the enemy's capital."
+ take_capital_caliphate_shia: "Take capital"
+ take_capital_caliphate_shia_desc: "Take the enemy's capital."
+ take_capital_caliphate_shia: "Take capital"
+ take_capital_caliphate_shia_desc: "Take the enemy's capital."
+ CALIPHATE_CONTROL_WAR_NAME: "War for the Caliphate"
+ take_capital_attack_caliphate_heretic: "Take capital"
+ take_capital_attack_caliphate_heretic_desc: "Take the enemy's capital"
+ take_capital_attack_caliphate_heathen: "Take capital"
+ take_capital_attack_caliphate_heathen_desc: "Take the enemy's capital"
+ CALIPHATE_ATTACK_WAR_NAME: "War to topple the Caliphate"
+ PEACE_cal_take_caliphate: "Take the Caliphate"
+ CB_ALLOWED_cal_take_caliphate: "Take the Caliphate"
+ cal_take_caliphate_desc: "Take the Caliphate from [From.GetName]"
+ PEACE_cal_take_caliphate_sunni: "Take Sunni Caliphate"
+ CB_ALLOWED_cal_take_caliphate_sunni: "Take Sunni Caliphate"
+ cal_take_caliphate_sunni_desc: "Take the Sunni Caliphate from [From.GetName]"
+ PEACE_cal_take_caliphate_shia: "Take Shia Caliphate"
+ CB_ALLOWED_cal_take_caliphate_shia: "Take Shia Caliphate"
+ cal_take_caliphate_shia_desc: "Take the Shia Caliphate from [From.GetName]"
+ PEACE_cal_take_caliphate_ibadi: "Take Ibadi Caliphate"
+ CB_ALLOWED_cal_take_caliphate_ibadi: "Take Ibadi Caliphate"
+ cal_take_caliphate_ibadi_desc: "Take the Ibadi Caliphate from [From.GetName]"
+ PEACE_cal_remove_caliphate: "Remove the Caliphate"
+ cal_remove_caliphate_desc: "Remove the Caliphate"
+ CB_ALLOWED_cal_remove_caliphate: "Force [From.GetName] to relinquish the title of Caliph"
+ CALIPHATE_JIHAD_WAR_NAME: "Great Jihad"
+ MUSLIM_UNIFICATION_WAR_NAME: "Muslim unification"
