Add scholars estate agendas
Add own agendas to scholars estate (not recognized?)
Minor fixes to scholars estate
Add event pictures
Add alternate ISS flags (not used in game, just backup)

--- a/localisation/cal_estates_l_english.yml
+++ b/localisation/cal_estates_l_english.yml
@@ -1,24 +1,74 @@
 ﻿l_english:
  estate_scholars: "Scholars"
- estate_scholars_land_rights: "University land rights"
+ estate_scholars_land_rights: "University land grants"
+ estate_scholars_land_rights_desc: "If they cannot support themselves from the land they have been granted, the Scholars will be unable to perform their duties."
  estate_scholars_scholar_state: "Scholar state"
+ estate_scholars_scholar_state_desc: "By making matters of science our foremost priority, we shall forge our nation into a more cohesive whole."
  estate_scholars_new_world_mission: "Establish New World Expeditions"
+ estate_scholars_new_world_mission_desc: "The new world is full of opportunity for scientific research and exloration. It could spur new innventions and discoveries."
  estate_scholars_scholarly_ministers: "Scholarly Ministers"
+ estate_scholars_scholarly_ministers_desc: "If we listen to the advice of the Scholars and place their concerns at the forefront of our mind, we may derive considerable benefits for our rule and see the people's faith in [Root.GetReligionNoun] greatly strengthened."
  estate_scholars_scholarly_oversight: "Oversight by the $ESTATE_NAME$"
+ estate_scholars_scholarly_oversight_desc: "The only sure way to guarantee that correct practices are maintained is to allow the Scholars to oversee the implementation of the [Root.Monarch.GetTitle]'s decisions."
  estate_scholars_inwards_perfection: "Inwards Perfection"
- estate_scholars_for_the_faith: "Expansionist Atheism"
- estate_scholars_enforced_no_faith: "Enforced Removal of Faith"
- estate_scholars_land_rights_desc: "If they cannot support themselves from the land they have been granted, the [Root.GetClergyName] will be unable to perform their spiritual duties."
- estate_scholars_scholar_state_desc: "By making matters of religion our foremost priority, we shall forge our nation into a more cohesive whole."
- estate_scholars_new_world_mission_desc: "The New World is teeming with heathens. It is the calling of the [Root.GetClergyName] to bring the truth of the [Root.Religion.GetName] faith to these lands."
- estate_scholars_scholarly_ministers_desc: "If we listen to the advice of the [Root.GetClergyName] and place their concerns at the forefront of our mind, we may derive considerable benefits for our rule and see the people's faith in [Root.GetReligionNoun] greatly strengthened."
- estate_scholars_scholarly_oversight_desc: "The only sure way to guarantee that correct practices are maintained is to allow the [Root.GetClergyName] to oversee the implementation of the [Root.Monarch.GetTitle]'s decisions."
  estate_scholars_inwards_perfection_desc: "The core principles of [Root.GetReligionNoun] are to focus inwards on improving the self rather than outwards on any aspect of the other. The supposed glory achieved through violent conquest is irrelevant in such a society."
- estate_scholars_for_the_faith_desc: "To wage war for our faith is the prime calling of all true believers."
- estate_burghers_enforced_interfaith_dialogue_desc:0 "The accumulation of wealth is truly a higher calling than that of religion. We must cast off our differences and come together in our pursuit of riches."
- estate_scholars_enforced_no_faith_desc: "It is self-evident that [Root.GetReligionNoun] is the one true faith. There shall be no compromising our beliefs for those who heed the words of heretics and heathens!"
+ estate_scholars_for_the_faith: "Expansionist Atheism"
+ estate_scholars_for_the_faith_desc: "To wage war to spread our enlightened ways is our prime calling."
+ estate_scholars_enforced_no_faith: "Enforced Removal of Faith"
+ estate_scholars_enforced_no_faith_desc: "It is self-evident that there is no true faith. There shall be no compromising our beliefs for those who heed the words of backwards churches!"
  scholars_loyalty_modifier: "Scholars loyalty"
  scholars_influence_modifier: "Scholars influence"
  EST_UNIVERSITIES: "Built univerities"
  EST_INNOVATION: "Innovativeness"
  EST_TECH_DIFFERENCE: "Technologically advanced"
+ estate_scholars_develop_x: "Increase Tax Income in [agenda_province.GetName]"
+ estate_scholars_develop_x_desc: "The Scholars request that we invest in the prosperity of their lands in [agenda_province.GetName]."
+ estate_scholars_convert_province_x: "Convert [agenda_province.GetName]"
+ estate_scholars_convert_province_x_desc: "The Scholars are concerned at the continued presence of unbelievers in our nation. They demand that we root them out, starting with those living in [agenda_province.GetName]!"
+ estate_scholars_build_university_in_y: "Build a University in [agenda_province.GetName]"
+ estate_scholars_build_university_in_y_desc: "The Scholars ask us to fund the establishment of a new university in [agenda_province.GetName], so that the best minds of the country may benefit from their tuition."
+ estate_scholars_build_manufactory_in_y: "Build a Manufactory in [agenda_province.GetName]"
+ estate_scholars_build_manufactory_in_y_desc: "The Scholars of [agenda_province.GetName] request that we fund the construction of a new [agenda_province.GetManufactory]. They claim that it will be a highly profitable investment, doubling the province's output of [agenda_province.GetTradeGoodsName]."
+ estate_scholars_reduce_war_exhaustion: "Recover from the Ravages of War"
+ estate_scholars_reduce_war_exhaustion_desc: "The Scholars complain at the suffering caused by [Root.GetUsableName]'s many wars. They beseech us to allow the nation to recover before attempting further conquests."
+ estate_scholars_restore_devotion: "Restore Legitimacy"
+ estate_scholars_restore_devotion_desc: "The Scholars are dismayed at the lack of devlegitimacyotion shown by the [Root.Monarch.GetTitle]. They demand that proper governmental practices be restored in [Root.GetUsableName]."
+ estate_scholars_recover_stability: "Stabilize the Country"
+ estate_scholars_recover_stability_desc: "The Scholars long for stability. They call on us to restore order to [Root.GetUsableName]."
+ estate_scholars_increase_stability: "Boost National Stability"
+ estate_scholars_increase_stability_desc: "The Scholars see the stability of [Root.GetUsableName] as paramount. They insist that we must improve the nation's governance so that our nation may be free from instability."
+ estate_scholars_reduce_overextension: "Reduce Overextension"
+ estate_scholars_reduce_overextension_desc: "The Scholars claim that our nation's governing capabilities are stretched to breaking point. They contend that we must pause to consolidate before attempting further conquests."
+ estate_scholars_protect_brethren: "Protect our Brethren in [agenda_province.GetName]"
+ estate_scholars_protect_brethren_desc: "The Scholars are horrified at the persecution of their [Root.Religion.GetName] brothers in [agenda_province.GetName] at the hands of their [agenda_country.GetAdjective] masters. They demand that we take immediate action to free them from oppression!"
+ estate_scholars_relations_with_dotf: "Improve Relations with the Defender of the [Root.Religion.GetName] Faith"
+ estate_scholars_relations_with_dotf_desc: "[agenda_country.GetUsableName] is a great bastion of the [Root.Religion.GetName] faith. The Scholars wish us to strengthen our ties with them, so that their cause may also become our own."
+ estate_scholars_hire_advisor: "Hire an Administrative Advisor"
+ estate_scholars_hire_advisor_desc: "The Scholars desire the [Root.Monarch.GetTitle] to hire a new administrative advisor."
+ estate_scholars_fire_advisor: "Fire our Administrative Advisor"
+ estate_scholars_fire_advisor_desc: "[Root.Adm_Advisor.GetTitle] [Root.Adm_Advisor.GetName] has insulted the Scholars. They demand that we fire [Root.Adm_Advisor.GetHerHim]!"
+ estate_scholars_monopoly_of_incense: "Monopoly on Incense"
+ estate_scholars_monopoly_of_incense_effect_tooltip: "§RNo income from §YIncense§!§!"
+ estate_scholars_monopoly_of_incense_mod: "Monopoly on Incense"
+ desc_estate_scholars_monopoly_of_incense_mod: "The state has granted the Scholars monopoly rights over incense production."
+ estate_scholars_monopoly_of_wool: "Monopoly on Wool"
+ estate_scholars_monopoly_of_wool_effect_tooltip: "§RNo income from §YWool§!§!"
+ estate_scholars_monopoly_of_wool_mod: "Monopoly on Wool"
+ desc_estate_scholars_monopoly_of_wool_mod: "The state has granted the Scholars monopoly rights over wool production."
+ estate_scholars_monopoly_of_wine: "Monopoly on Wine"
+ estate_scholars_monopoly_of_wine_effect_tooltip: "§RNo income from §YWine§!§!"
+ estate_scholars_monopoly_of_wine_mod: "Monopoly on Wine"
+ desc_estate_scholars_monopoly_of_wine_mod: "The state has granted the Scholars monopoly rights over wine production."
+ estate_scholars_monopoly_of_slaves: "Monopoly on Slaves"
+ estate_scholars_monopoly_of_slaves_effect_tooltip: "§RNo income from §YSlaves§!§!"
+ estate_scholars_monopoly_of_slaves_mod: "Monopoly on Slaves"
+ desc_estate_scholars_monopoly_of_slaves_mod: "The state has granted the Scholars monopoly rights over the slave trade to ensure that there are always sufficient victims available for sacrifice."
+ estate_scholars_monopoly_of_incense_revoke_tooltip: "Production income from §YIncense§! is restored"
+ estate_scholars_monopoly_of_wool_revoke_tooltip: "Production income from §YWool§! is restored"
+ estate_scholars_monopoly_of_wine_revoke_tooltip: "Production income from §YWine§! is restored"
+ estate_scholars_monopoly_of_slaves_revoke_tooltip: "Production income from §YSlaves§! is restored"
+ estate_scholars_monopoly_of_incense_desc: "The incenses and other fragrant spices that are so popular for our scinetific practices are expensive. The Scholars desire to control their production so that they may be a boon rather than a drain to their resources."
+ estate_scholars_monopoly_of_wool_desc: "Humble wool is a vital good that is indispensable to the common people. Rather than leave its supply to chance, the Scholars would administer its production to ensure that their students and subjects need never fear for clothing."
+ estate_scholars_monopoly_of_wine_desc: "Beer is made by men, wine by God, or so the saying goes. Certainly, the Scholars are most eager to control its revenues. Let us just hope they spare enough of the produce for the rest of us!"
+ estate_scholars_monopoly_of_slaves_desc: "Our universities require regular test subjects for their experiments. Giving the Scholars full control over the trade in slaves is a sensible precaution to ensure that a ready supply of souls may be maintained."
+ estate_scholars_for_the_faith_effect_tooltip: "Morale of Armies: §G+5%§! when at war with religious countries.\n\nMorale of Armies: §R-5%§! if at peace with religiuos countries for 15 years"
