Add convert to atheism event
Add both country and province event (only province event is used)

--- a/localisation/cal_events_l_english.yml
+++ b/localisation/cal_events_l_english.yml
@@ -33,3 +33,9 @@
  cal_flavor.9.a: "Accept national responibility for the genocide"
  cal_flavor.9.b: "Fervently deny the existence of the genocide"
  cal_flavor.9.c: "Commit the genocide again to show dominance"
+ cal_flavor.10.t: "Province renounces religion"
+ cal_flavor.10.d: "TODO"
+ cal_flavor.10.a: "They have seen the light"
+ cal_flavor.11.t: "$PROVINCENAME$ renounces religion"
+ cal_flavor.11.d: "TODO"
+ cal_flavor.11.a: "They have been enlightened"
