--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -34,6 +34,10 @@
  desc_cal_genocide_province: "TODO"
  cal_concessions_to_soldiers: "Increase pay for the soldiers"
  desc_cal_concessions_to_soldiers: "TODO"
+ cal_genocide_accepted: "Genocide accepted"
+ desc_cal_genocide_accepted: "TODO"
+ cal_genocide_denied: "Genocide denied"
+ desc_cal_genocide_denied: "TODO"
  harmonized_cal_christian: "Chritians Harmonized"
  harmonized_cal_muslim: "Muslims Harmonized"
  harmonized_cal_buddhism: "Buddhists Harmonized"
